--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
+    "@types/react-no-ssr": "^1.1.7",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-awesome-reveal": "^4.2.7",
+    "react-countup": "^6.5.0",
+    "react-dom": "^18",
+    "react-no-ssr": "^1.1.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
