--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-no-ssr": "^1.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
