--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18",
     "react-no-ssr": "^1.1.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "react-typist": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
