--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-no-ssr": "^1.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-type-animation": "^3.2.0",
-    "react-typist": "^2.0.5"
+    "react-typist": "^2.0.5",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
