--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.10",
+    "@reduxjs/toolkit": "^2.2.2",
+    "dotenv": "^16.4.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-no-ssr": "^1.1.0"
+    "react-no-ssr": "^1.1.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
