--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@types/react-no-ssr": "^1.1.7",
+    "dotenv": "^16.4.5",
     "next": "14.0.4",
     "react": "^18",
     "react-awesome-reveal": "^4.2.7",
