--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
+    "jwt-js-decode": "^1.8.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
